# Go-ICP

./: CMakeLists.txt  bunny_demo.launch  go_icp_node.cpp  package.xml  point3d_publisher.cpp
demo/: output.txt
